--- a/pagina3.css
+++ b/pagina3.css
@@ -12,8 +12,7 @@ html {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    background-color: #F9F8FE;
+
 }
 
 body {
@@ -24,14 +23,14 @@ header {
     width: 100%;
 }
 
-header.logo {
+header .logo {
     display: flex;
     align-items: center;
     gap: 15px;
     color: #C92071;
 }
 
-header.logo img {
+header .logo img {
     width: 33px;
     height: 33px;
 }
@@ -81,9 +80,6 @@ header.itens {
     transform: translateY(-3px);
 
 }
-
-
-
 .linksheader a {
     color: #474747;
 }
@@ -102,8 +98,6 @@ header.itens {
 #barraPesquisa {
     width: 499px;
     height: 60px;
-    /* margin-top: 34px;
-    margin-left: 10px; */
     border: 0px;
     border-radius: 8px 0 0 8px;
     background-color: #4747470a;
@@ -143,8 +137,6 @@ header.itens {
 #cadastro {
     width: 102px;
     height: 28px;
-    /* margin-top: 50px;
-    margin-left: 48px; */
     text-decoration: underline;
     color: black;
 }
@@ -152,8 +144,6 @@ header.itens {
 #botaoEntrar {
     width: 114px;
     height: 40px;
-    /* margin-top: 44px;
-    margin-left: 30px; */
     color: #f5f5f5;
     background-color: #C92071;
     border: 0px;
@@ -176,15 +166,11 @@ header.itens {
     justify-content: end;
     width: 33px;
     height: 29px;
-    /* margin-top: 47px;
-    margin-left: 70px;
-    margin-right: 100px; */
 }
 
 
 .itens-cadastro {
     display: flex;
-    /* justify-content: space-around; */
     gap: 20px;
     align-items: center;
 }
@@ -192,8 +178,10 @@ header.itens {
 .barra-especificaçoes {
     font-family: "Inter";
     font-size: 16px;
-    width: 600px;
-    margin-left: 100px
+    /* width: 100%; */
+    /* width: 600px; */
+    padding-left: 100px;
+    background-color: #F9F8FE;
 }
 
 .div-do-tenis {
@@ -201,6 +189,7 @@ header.itens {
     background-color: #F9F8FE;
     gap: 50px;
     width: 100%;
+    justify-content: center;
 }
 
 .especificacoes {
@@ -210,7 +199,7 @@ header.itens {
 }
 
 .carousel-item {
-    background-color: 1#E2E3FF;
+    background-color: #E2E3FF;
     width: 700px;
     height: 600px;
 }
@@ -223,7 +212,7 @@ header.itens {
 
 .carousel-inner img {
     margin: 100px;
-    margin-top: 150px; 
+    margin-top: 150px;
 }
 
 .slide2 {
@@ -242,7 +231,7 @@ header.itens {
     background-color: #E8DFCF;
 }
 
-.imagenszinhas{
+.imagenszinhas {
     display: flex;
     justify-content: space-between;
     margin: 25px 0px 0px 0px;
@@ -252,7 +241,7 @@ header.itens {
     border-radius: 4px;
     width: 100px;
     height: 96px;
-    
+
 }
 
 .imagem1 {
@@ -280,7 +269,7 @@ header.itens {
     display: flex;
     flex-direction: column;
     margin-left: 50px;
- }
+}
 
 .detalhes-tenis .texto_detalhes_tenis {
     color: #666666;
@@ -383,7 +372,7 @@ header.itens {
     height: 48px;
     border-radius: 4px;
     border-width: 1px;
-    background-color: #ccc8c8;
+    background-color: #ffffff;
     color: #474747;
     font-family: Inter;
     font-weight: 700;
@@ -391,14 +380,13 @@ header.itens {
     line-height: 24px;
     letter-spacing: 0.75px;
     cursor: pointer;
-    border: none;
 }
 
 .tamanho_detalhes-tenis button:active {
     background-color: #C92071;
 }
 
-.botoes_detalhes-tenis button {
+.botoes_detalhes-tenis_cor button {
     width: 31px;
     height: 31px;
     border-radius: 50%;
@@ -406,9 +394,10 @@ header.itens {
     font-size: 24px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-left: 15px;
 }
 
-.botoes_detalhes-tenis button:active {
+.botoes_detalhes-tenis_cor button:active {
     border: 4px solid #C92071;
 }
 
@@ -442,17 +431,28 @@ header.itens {
     letter-spacing: 0.75px;
     text-align: center;
     vertical-align: middle;
-    color: white;
+    color: rgb(255, 250, 250);
 }
 
+.botao_comprar_detalhes-tenis:hover {
+    border: 1px solid black;
+}
 
+.botao_comprar_detalhes-tenis:active {
+    background-color: #C92071;
+}
+
+.produtos_relacionados {
+    background-color: #F9F8FE;
+}
 
 .titulo_produtos_relacionados {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 100px;
+    padding-left: 100px;
     background-color: #F9F8FE;
+
 }
 
 .h1_produtos_relacionados {
