--- a/pagina3.css
+++ b/pagina3.css
@@ -178,8 +178,6 @@ header.itens {
 .barra-especificaçoes {
     font-family: "Inter";
     font-size: 16px;
-    /* width: 100%; */
-    /* width: 600px; */
     padding-left: 100px;
     background-color: #F9F8FE;
 }
@@ -190,6 +188,7 @@ header.itens {
     gap: 50px;
     width: 100%;
     justify-content: center;
+    justify-content: space-between;
 }
 
 .especificacoes {
